# to-do-list-api

./: .env.template  README.md  pyproject.toml
docker/: docker-compose.yml
docker/initdb/: init.sql
scripts/: start.sh
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  auth.py  tasks.py
src/configs/: __init__.py  config.py
src/crud/: __init__.py  base.py  task.py
src/models/: task.py
src/schemas/: __init__.py  task.py
src/security/: __init__.py  token.py
src/utilities/: __init__.py  exceptions.py
